[package]
name = "banana"
version = "0.0.2"
authors = ["shockham <samuel.hockham@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shockham/banana"
homepage = "https://github.com/shockham/banana"
description = "web micro framework"

[dependencies]
regex = "1.7"
lazy_static = "1.4"
num_cpus = "1.2.1"
